<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/board">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="25sp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:onClick="enableDebug"
        style="@style/CommonText"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/square_gray"
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <Switch
            android:id="@+id/soundsStatus"
            style="@style/CommonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:font="@font/pixel_font"
            android:onClick="clicked"
            android:text="@string/settings_sound" />

        <Switch
            android:id="@+id/vibrationStatus"
            style="@style/CommonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:onClick="clicked"
            android:text="@string/settings_vibration" />

        <Switch
            android:id="@+id/debugStatus"
            style="@style/CommonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:onClick="clicked"
            android:text="@string/settings_debug"
            android:visibility="invisible" />

        <Button
            android:id="@+id/clearDatabase"
            style="@style/CommonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="#FF0505"
            android:onClick="deleteScoreData"
            android:padding="15dp"
            android:text="@string/button_reset_data" />

    </LinearLayout>

</LinearLayout>
